Fix hero section text alignment to center

--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -13,6 +13,7 @@
   min-height: 500px;
   display: flex;
   align-items: center;
+  text-align: center;
   
   @media (max-width: 767px) {
     padding: 3rem 0;
